--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,5 +3,5 @@
     max-width: 1280px;
     color: white;
     margin: 0 auto;
-    font-family: 'Inter', sans-serif, 'Courier New', Courier, monospace;
+    font-family: 'Inter', 'Arial', sans-serif; 
 }
