--- a/pages/index.css
+++ b/pages/index.css
@@ -11,17 +11,25 @@
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
 @import url('../blocks/profile/__title/profile__title.css');
-@import url('../blocks/profile/__form-container/profile__form-container.css');
-@import url('../blocks/profile/__form/profile__form.css');
-@import url('../blocks/profile/__form-submit/profile__form-submit.css');
-@import url('../blocks/profile/__form-close/profile__form-close.css');
-@import url('../blocks/profile/__form-input/profile__form-input.css');
-@import url('../blocks/profile/__form-title/profile__form-title.css');
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/_image/popup_image.css');
+@import url('../blocks/popup/__foto/popup__foto.css');
+@import url('../blocks/popup/__description/popup__description.css');
+@import url('../blocks/popup/__element-image/popup__element-image.css');
+@import url('../blocks/popup/__button-close-image/popup__button-close-image.css');
+@import url('../blocks/popup/__form-input/popup__form-input.css');
+@import url('../blocks/popup/__form-submit/popup__form-submit.css');
+@import url('../blocks/popup/__form-title/popup__form-title.css');
+@import url('../blocks/popup/__button-close/popup__button-close.css');
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/element/element.css');
+@import url('../blocks/element/__trash/element__trash.css');
+@import url('../blocks/element/__trash-image/element__trash-image.css');
 @import url('../blocks/element/__foto/element__foto.css');
-@import url('../blocks/element/__like-foto/element__like-foto.css');
 @import url('../blocks/element/__like/element__like.css');
+@import url('../blocks/element/__like_black/element__like_black.css');
 @import url('../blocks/element/__subscription/element__subscription.css');
 @import url('../blocks/element/__title/element__title.css');
 @import url('../blocks/footer/footer.css');
