--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,11 +1,11 @@
 .element {
     max-width: 282px;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     color: black;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+    position: relative;
 }
