--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,6 +5,8 @@
     flex-wrap: wrap;
     column-gap: 17px;
     row-gap: 20px;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 @media screen and (max-width: 525px) {
