--- a/blocks/footer/__title/footer__title.css
+++ b/blocks/footer/__title/footer__title.css
@@ -4,6 +4,7 @@
     padding: 0;
     font-size: 18px;
     line-height: 21.78px;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 320px) {
