--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,12 @@
 .header__logo {
     max-width: 142px;
     max-height: 33px;
+    padding: 0 0 41px;
 }
 
 @media screen and (max-width: 525px) {
     .header__logo { 
-     margin: 0 0 0 32px;
+     padding: 0 0 31px 28px;
      max-width: 103.74px;
      max-height: 24.4px;
  }
