--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -1,10 +1,10 @@
-.profile__form-input {
+.popup__form-input {
     width: 81.8%;
     padding: 0;
     margin: 0;
     outline: none;
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     padding-bottom: 13px;
     font-size: 14px;
     line-height: 17px;
