--- a/blocks/popup/__form-title/popup__form-title.css
+++ b/blocks/popup/__form-title/popup__form-title.css
@@ -1,4 +1,4 @@
-.profile__form-title {
+.popup__form-title {
     margin: 34px 0 0;
     padding: 0;
     width: 81.8%;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 525px) {
-    .profile__form-title {
+    .popup__form-title {
     font-size: 18px;
     line-height: 21.78px;
  }
