--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,20 +1,26 @@
-.profile__form {
+.popup__form {
     background-color: white;
     display: flex;
-    margin: 195px auto 0;
+    margin: 0 auto;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     row-gap: 30px;
-    max-width: 430px;
+    width: 35%;
     color: black;
     z-index: 2;
     border-radius: 10px;
     position: relative;
 }
 
+@media screen and (max-width: 925px) {
+    .popup__form {
+        width: 40%;
+ }
+ }
+
 @media screen and (max-width: 525px) {
-    .profile__form { 
-     margin: 123px auto 0;
-     max-width: 282px;
+    .popup__form { 
+     width: 88.12%;
  }
  }
