--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     column-gap: 17px;
     row-gap: 20px;
-    justify-content: flex-start;
+    justify-content: first baseline;
     align-items: flex-start;
 }
 
