--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -12,5 +12,5 @@
     flex-direction: column;
     visibility: hidden;
     opacity: 0;
-    transition: all .8s ease 0s;
+    transition: all 1s ease 0s;
 }
