--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,7 @@
 .profile__add-button {
     margin: 0 0 0 auto;
     padding: 0;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     background: transparent;
     border: 2px solid white;
