--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,8 @@
     max-width: 68.75%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    column-gap: 30px;
 }
 
 @media screen and (max-width: 950px) {
