--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
 @import url('../blocks/profile/__title/profile__title.css');
+@import url('../blocks/profile/__image/profile__image.css');
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__form/popup__form.css');
@@ -28,15 +29,22 @@
 @import url('../blocks/popup/__form-submit/popup__form-submit.css');
 @import url('../blocks/popup/__form-title/popup__form-title.css');
 @import url('../blocks/popup/__button-close/popup__button-close.css');
+@import url('../blocks/popup/_delete/popup_delete.css');
+@import url('../blocks/popup/__question/popup__question.css');
+@import url('../blocks/popup/__form_delete/popup__form_delete.css');
+@import url('../blocks/popup/__button-close_delete/popup__button-close_delete.css');
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/element/element.css');
 @import url('../blocks/element/__trash/element__trash.css');
 @import url('../blocks/element/__trash-image/element__trash-image.css');
 @import url('../blocks/element/__foto/element__foto.css');
 @import url('../blocks/element/__like/element__like.css');
+@import url('../blocks/element/__trash/__trash_inactive/element__trash_inactive.css');
+@import url('../blocks/element/__likes/element__likes.css');
 @import url('../blocks/element/__like_black/element__like_black.css');
 @import url('../blocks/element/__subscription/element__subscription.css');
 @import url('../blocks/element/__title/element__title.css');
+@import url('../blocks/element/__likes-count/element__likes-count.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__title/footer__title.css');
 @import url('../blocks/edit-title-error/edit-title-error.css');
