--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,29 @@
 .profile__avatar {
-    max-width: 120px;
-    max-height: 120px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    overflow: hidden;
+    z-index: 2;
+}
+
+.profile__avatar::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 1.5s ease;
+    z-index: 5;
+}
+
+.profile__avatar:hover::before {
+    background-color: rgba(0, 0, 0, 0.8);
+    background-image: url('../../../images/Pen.svg');
+    background-repeat: no-repeat;
+    background-position: center;
 }
